--- a/test-app/src/header.css
+++ b/test-app/src/header.css
@@ -6,9 +6,7 @@
 }
 
 .header {
-    /* min-height: 100vh; */
     width: 100%;
-    /* background: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url('/Images/background.jpeg'); */
     background-position: center;
     background-size: cover;
     position: relative;
@@ -18,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 40px; /* 로고와 메뉴 사이 공간 */
+  gap: 40px;
   padding: 0.1% 2%;
   position: sticky;
   top: 10px;
@@ -30,7 +28,7 @@
 .logo {
   width: 150px;
   height: auto;
-  margin-right: 40px; /* 메뉴와 떨어지게 */
+  margin-right: 40px;
 }
 
 .nav-menu {
@@ -44,23 +42,34 @@
     list-style: none;
     display: flex;
     gap: 20px;
-    justify-content: flex-end; /* 오른쪽 정렬 */
+    justify-content: flex-end;
+}
+
+.nav-menu ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 4px 12px;
+    position: relative;
 }
 
 .nav-menu ul li a {
     color: black;
     text-decoration: none;
     font-size: 20px;
-    cursor: pointer;
-    padding: 8px 12px;
-    display: inline-block;
-    transition: border-bottom 0.3s ease;
-    border-bottom: 2px solid transparent;
 }
 
-.nav-menu ul li a:hover,
-.nav-menu ul li a:focus {
-    border-bottom: 2px solid black;
+.nav-menu ul li::after {
+    content: '';
+    background: black;
+    width: 0%;
+    height: 2px;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+
+.nav-menu ul li:hover::after {
+    width: 100%;
 }
 
 .fa.fa-bars,
@@ -69,10 +78,8 @@
     cursor: pointer;
     color: black;
     display: none;
-    /* 모바일용이라 필요하면 미디어쿼리에서 다시 보여주기 */
 }
 
-/* 모바일에서 메뉴 아이콘 보이기 */
 @media (max-width: 700px) {
 
     .fa.fa-bars,
