--- a/test-app/src/home/style.css
+++ b/test-app/src/home/style.css
@@ -116,9 +116,8 @@ nav .fa {
         position: fixed;
         background: white;
         height: 100vh;
-        width: 200px;
+        width: 100vw;
         top: 0;
-        right: -200px;
         text-align: left;
         z-index: 999;
         transition: 1s;
